2003-12-01  Eric Botcazou  <ebotcazou@libertysurf.fr>

	Backport from mainline:

	2003-11-27  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/12900
	* reg-stack (move_for_stack_reg): New prototype.  Return
	whether a control flow insn was deleted.
	(subst_stack_regs_pat): Likewise, using the information provided
	by move_for_stack_reg.
	(subst_stack_regs): Likewise, using the information provided
	by subst_stack_regs_pat.
	(convert_regs_1): Record whether a control flow insn was deleted,
	using the information provided by subst_stack_regs.  Purge dead
	edges only if a control flow insn was deleted.

2003-12-01  Gabriel Dos Reis <gdr@integrable-solutions.net>

	* doc/c-tree.texi (Function Bodies): Update HANDLER documentation.

2003-11-29  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.md ("cmpint_di"): Fix incorrect instruction lengths.

2003-11-19  Alan Modra  <amodra@bigpond.net.au>

	Backport 2003-03-26  Alan Modra  <amodra@bigpond.net.au>
	* cppinit.c (init_standard_includes): Add both "translated" and
	non-translated header paths.

2003-11-18  Gerald Pfeifer  <gerald@pfeifer.com>

	Fix links in online manuals.
	* doc/invoke.texi (H8/300 Options): @xref to ld, not ld.info.

2003-11-17  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/invoke.texi (Warning Options): Simplify and clarify the
	description of -Wnonnull.

2003-11-14  Matthias Klose  <doko@debian.org>

	Backport from mainline

	2003-06-04  Jakub Jelinek  <jakub@redhat.com>

	* function.c (trampolines_created): New variable.
	(expand_function_end): Set it when doing INITIALIZE_TRAMPOLINE.
	* function.h (trampolines_created): Add.
	* config/s390/linux.h (ASM_FILE_END): Define.
	* config/alpha/linux-elf.h (ASM_FILE_END): Define.
	* config/m68k/linux.h (ASM_FILE_END): Define.
	* config/rs6000/linux.h (ASM_FILE_END): Define.
	* config/rs6000/linux64.h (ASM_FILE_END): Define.
	* config/sparc/linux.h (ASM_FILE_END): Define.
	* config/sparc/linux64.h (ASM_FILE_END): Define.